--- a/sabliere/assets/styles.scss
+++ b/sabliere/assets/styles.scss
@@ -10,4 +10,10 @@ body {
 @import 'typography';
 @import 'header';
 @import 'produits';
+@import 'services';
 @import 'footer';
+@import 'contact';
+@import 'compagnie';
+@import 'accueil';
+@import 'ouverture-compte';
+@import 'base';
