--- a/sabliere/_sass/_footer.scss
+++ b/sabliere/_sass/_footer.scss
@@ -3,22 +3,59 @@
 
 .footer {
   background: #EDEDED;
-  padding: 30px 0;
+}
+
+.footer__extra-wrap {
+  padding: 30px 40px;
+
+  @include media('desktop-wide') {
+    padding: 0 40px;
+  }
 }
 
 .footer__list {
   margin: 0;
   padding: 0;
-  padding-top: 10px;
+  padding-top: 30px;
   list-style: none;
   text-align: center;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .footer__list-item {
-  padding: 10px;
+  padding: 10px 40px;
+  padding-left: 0;
+  display: flex;
 }
 
 .footer__list-text {
   display: inline-block;
   vertical-align: top;
+  padding-left: 10px;
+}
+
+.footer__nav {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__nav-item {
+  padding: 10px;
+  font-family: system-ui, sans-serif;
+  font-weight: 100;
+  color: $accent-color;
+}
+
+.footer__logo {
+  mix-blend-mode: luminosity;
+  opacity: 0.65;
+}
+
+.footer hr {
+  margin-top: 38px;
+  margin-bottom: 0;
 }
