--- a/sabliere/_sass/_produits.scss
+++ b/sabliere/_sass/_produits.scss
@@ -1,65 +1,25 @@
 // PRODUITS
 // -----------------------------------------------------------------------------
 
-.banner {
-  position: relative;
-  height: 540px;
-}
-
 .produits__banner {
-  background: url(/assets/images/photo4.jpg);
+  background: url(/assets/images/pierre-banner.JPG);
   background-size: cover;
   background-position: 50%;
 }
 
-.services__banner {
-  background: url(/assets/images/home.jpg);
-  background-size: cover;
-  background-position: 50%;
+#map {
+  width: 100%;
+  height: 580px;
 }
 
-.title {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-
-  @include media('desktop') {
-    h1 {
-      font-size: 84px;
-    }
-  }
-
-  @include media('desktop-wide') {
-    left: 60px;
-  }
-
-}
-
-.produits__list {
-  margin: 0;
-  padding: 30px 20px;
-  display: flex;
-  flex-direction: column;
-
-  @include media('desktop') {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    padding-top: 0;
-  }
-}
-
-.produits__item {
-  list-style: none;
-  padding-bottom: 40px;
-
-  @include media('desktop') {
-    padding: 40px;
-    width: 320px;
-  }
+.content__list-item:nth-child(8) {
+  padding-bottom: 90px;
 }
 
 .produits__title {
-  padding: 10px 0;
+  padding: 0;
+}
+
+.produits__info {
+  padding-bottom: 20px;
 }
