--- a/sabliere/_sass/_typography.scss
+++ b/sabliere/_sass/_typography.scss
@@ -6,6 +6,8 @@ a {
   color: $accent-color;
   font-family: system-ui, sans-serif;
   transition: .3s ease-in-out;
+  line-height: 1.5em;
+  z-index: 1;
 
   &:hover {
     color: darken($accent-color, 10%);
@@ -33,7 +35,7 @@ h2 {
 
 h3 {
   font-family: system-ui, sans-serif;
-  font-size: 26px;
+  font-size: 20px;
   margin: 0;
   font-weight: normal;
   color: #195ada;
@@ -65,13 +67,24 @@ p {
 .black-highlight {
   background: black;
   color: white;
-  padding: 0 5px;
+  padding: 0 15px;
+  padding-top: 5px;
   width: fit-content;
 }
 
 .blue-highlight {
-  background: $accent-color;
+  background: transparentize($accent-color, 0.05);
   color: white;
-  padding: 0 5px;
+  padding: 0 15px;
+  padding-top: 5px;
   width: fit-content;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+// BOLD
+// -----------------------------------------------------------------------------
+
+b {
+  font-weight: 500;
 }
