--- a/sabliere/_sass/_header.scss
+++ b/sabliere/_sass/_header.scss
@@ -1,64 +1,47 @@
-// LOGO
-// -----------------------------------------------------------------------------
-
-.logo {
-  display: block;
-  margin: 0 auto;
-  height: 50px;
-  // Logo isn't centered inside the image
-  transform: translateY(-6%);
-}
-
-.logo-plate {
-  flex-grow: 1;
-
-  width: auto;
-  padding: 25px 10px;
-  z-index: 1;
-  background: white;
-
-  @include media('desktop') {
-    box-shadow: inset -1px 0 #d0d0d0;
-    padding: 25px 30px;
-  }
-}
-
-.logo__link {
-  flex-grow: 1;
-}
-
 
 // HEADER
 // -----------------------------------------------------------------------------
 
 .header {
-  height: 100px;
-  margin: 0;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 10px 40px rgba(0,0,0,.15);
 
-  display: flex;
-  flex-wrap: wrap;
-
-  @include media('desktop-wide') {
-
+  @include media('desktop') {
+    display: flex;
+    align-items: center;
   }
 }
+
+
+// LOGO
+// -----------------------------------------------------------------------------
+
+.logo {
+  display: block;
+  padding: 25px;
+}
+
+.logo__image {
+  transform: translateY(-6%); // Logo isn't centered inside the image
+  margin: 0 auto;
+  display: block;
+}
+
 
 // NAVIGATION
 // -----------------------------------------------------------------------------
 
 .nav {
-  flex-grow: 100;
-
-  z-index: 1;
+  @include media('desktop') {
+    flex-grow: 1;
+  }
 }
 
 .nav__list {
   display: flex;
   flex-wrap: wrap;
-
   list-style-type: none;
-
-  height: 100%;
   padding: 0;
   margin: 0;
 
@@ -70,59 +53,31 @@
 .nav__item {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-grow: 1;
-
-  padding: 25px 10px;
   width: 50%;
-
   text-align: center;
   background: white;
   box-sizing: border-box;
+  box-shadow: 0 0 0 1px #e5e5e5;
+  line-height: 1.3;
 }
 
-.button {
-  background: transparentize($accent-color, 0.05); ;
+.nav__link {
+  padding: 25px 10px;
+  width: 100%;
+  box-sizing: border-box;
 
-  a {
+  .nav__item--active & {
+    color: black;
+    font-weight: 400;
+  }
+}
+
+.nav__item--button {
+  background: transparentize($accent-color, 0.05);
+  box-shadow: none;
+
+  .nav__link {
     color: white;
-  }
-}
-
-.active {
-  color: black;
-  font-weight: 400;
-}
-
-.nav__item:nth-child(1) {
-  border: 1px solid #d0d0d0;
-  border-left: none;
-
-  @include media('tablet-up') {
-    border: none;
-  }
-}
-
-.nav__item:nth-child(2) {
-  border: 1px solid #d0d0d0;
-  border-left: none;
-  border-right: none;
-
-  @include media('tablet-up') {
-    border: none;
-  }
-}
-
-.nav__item:nth-child(3) {
-  border-right: 1px solid #d0d0d0;
-
-  @include media('tablet-up') {
-    border: none;
-  }
-}
-
-.nav__item:nth-child(4) {
-  @include media('tablet-up') {
-      padding-right: 35px;
   }
 }
