--- a/sabliere/_layouts/default.html
+++ b/sabliere/_layouts/default.html
@@ -30,19 +30,18 @@
     <footer class="footer wrap">
       <div class="footer__extra-wrap">
         <img class="footer__logo" src="/assets/images/logo.svg">
-        <hr>
-        <ul class="footer__list">
-          <li class="footer__list-item">
+        <ul class="footer-list">
+          <li class="footer-list__item">
             <img src="/assets/images/email-icon.svg" alt="">
-            <h4 class="footer__list-text">sabliereclark@gmail.com</h4>
+            <a class="footer-list__link">sabliereclark@gmail.com</a>
           </li>
-          <li class="footer__list-item">
+          <li class="footer-list__item">
             <img src="/assets/images/phone-icon.svg" alt="">
-            <h4 class="footer__list-text">(514) 821-4242</h4>
+            <a class="footer-list__link">(514) 821-4242</a>
           </li>
-          <li class="footer__list-item">
+          <li class="footer-list__item">
             <img src="/assets/images/map-icon.svg" alt="">
-            <h4 class="footer__list-text">1483 Chemin Dufresne, Notre-Dame de la Merci</h4>
+            <a class="footer-list__link">1483 Chemin Dufresne, Notre-Dame de la Merci</a>
           </li>
         </ul>
       </div>
