--- a/sabliere/_sass/_footer.scss
+++ b/sabliere/_sass/_footer.scss
@@ -13,27 +13,27 @@
   }
 }
 
-.footer__list {
+.footer-list {
   margin: 0;
   padding: 0;
-  padding-top: 30px;
+  padding-top: 20px;
+  margin-top: 30px;
   list-style: none;
   text-align: center;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
+  border-top: 1px solid rgba(0, 0, 0, .1);
 }
 
-.footer__list-item {
+.footer-list__item {
   padding: 10px 40px;
   padding-left: 0;
   display: flex;
 }
 
-.footer__list-text {
-  display: inline-block;
-  vertical-align: top;
+.footer-list__link {
   padding-left: 10px;
 }
 
@@ -45,17 +45,10 @@
 
 .footer__nav-item {
   padding: 10px;
-  font-family: system-ui, sans-serif;
-  font-weight: 100;
   color: $accent-color;
 }
 
 .footer__logo {
   mix-blend-mode: luminosity;
   opacity: 0.65;
-}
-
-.footer hr {
-  margin-top: 38px;
-  margin-bottom: 0;
 }
