Fix mobile spacing

--- a/sabliere/_sass/_typography.scss
+++ b/sabliere/_sass/_typography.scss
@@ -78,7 +78,7 @@ p {
   padding: 0 15px;
   padding-top: 5px;
   width: fit-content;
-  font-weight: bold;
+  font-weight: 300;
   letter-spacing: 2px;
 }
 
