--- a/sabliere/_sass/_base.scss
+++ b/sabliere/_sass/_base.scss
@@ -18,7 +18,7 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  height: 580px;
+  height: 680px;
   width: 100%;
   z-index: -1;
 }
@@ -28,11 +28,11 @@ main {
   position: relative;
   margin: 0 -1px;
   margin-bottom: -1px;
-  margin-top: 430px;
+  margin-top: 370px;
   overflow: hidden;
 
   @include media('desktop-wide') {
-    margin-top: 390px;
+    margin-top: 490px;
   }
 }
 
@@ -47,7 +47,7 @@ main {
 
 .content__list-item {
   list-style: none;
-  padding: 30px;
+  padding: 30px 0;
   flex-grow: 1;
   border: 1px solid #ededed;
   border-top: none;
@@ -68,10 +68,14 @@ main {
 }
 
 .split-item {
-  width: 310px;
-  padding: 40px;
+  padding: 20px 0;
   flex-grow: 1;
-  padding-bottom: 70px;
+  // padding-bottom: 70px;
+
+  @include media('tablet-up') {
+    width: 310px;
+    padding: 40px;
+  }
 }
 
 .arrow-list {
@@ -99,11 +103,12 @@ main {
 }
 
 .split__content {
-  padding: 40px;
-  width: 460px;
+  padding: 40px 0;
   flex-grow: 1;
 
   @include media('desktop') {
+    padding: 40px;
+    width: 460px;
     flex-grow: 0;
   }
 }
