--- a/sabliere/_sass/_compagnie.scss
+++ b/sabliere/_sass/_compagnie.scss
@@ -1,3 +1,9 @@
+.compagnie-banner {
+  background: url('/assets/images/marcel.JPG');
+  background-size: cover;
+  background-position: 50%;
+}
+
 .compagnie__left-split-text {
   font-size: 22px;
   color: black;
