--- a/sabliere/_sass/_services.scss
+++ b/sabliere/_sass/_services.scss
@@ -1,11 +1,7 @@
 .services__banner {
-  background: url(/assets/images/tamiseur.JPG);
+  background: url('/assets/images/tamiseur.JPG');
   background-size: cover;
   background-position: 50%;
-}
-
-.services__item {
-  width: 420px;
 }
 
 .services__note-text {
