--- a/sabliere/_layouts/default.html
+++ b/sabliere/_layouts/default.html
@@ -16,7 +16,7 @@
           <ul class="nav__list">
             {% for item in site.navigation %}
               <li class="nav__item">
-                <a class="nav__link {% if item.url == page.url %}active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
+                <a class="nav__link {% if page.url contains item.url %}nav__link--active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
               </li>
             {% endfor %}
             <li class="nav__item nav__item--button"><a class="nav__link" href="/contact">Nous joindre →</a></li>
@@ -27,23 +27,25 @@
         {{ content }}
       </main>
     </div>
-    <footer class="footer wrap">
-      <div class="footer__extra-wrap">
-        <img class="footer__logo" src="/assets/images/logo.svg">
-        <ul class="footer-list">
-          <li class="footer-list__item">
-            <img src="/assets/images/email-icon.svg" alt="">
-            <a class="footer-list__link">sabliereclark@gmail.com</a>
-          </li>
-          <li class="footer-list__item">
-            <img src="/assets/images/phone-icon.svg" alt="">
-            <a class="footer-list__link">(514) 821-4242</a>
-          </li>
-          <li class="footer-list__item">
-            <img src="/assets/images/map-icon.svg" alt="">
-            <a class="footer-list__link">1483 Chemin Dufresne, Notre-Dame de la Merci</a>
-          </li>
-        </ul>
+    <footer class="footer">
+      <div class="wrap">
+        <div class="footer__extra-wrap">
+          <img class="footer__logo" src="/assets/images/logo.svg">
+          <ul class="footer-list">
+            <li class="footer-list__item">
+              <img src="/assets/images/email-icon.svg" alt="">
+              <a class="footer-list__link" href="mailto:sabliereclark@gmail.com">sabliereclark@gmail.com</a>
+            </li>
+            <li class="footer-list__item">
+              <img src="/assets/images/phone-icon.svg" alt="">
+              <a class="footer-list__link" href="tel:514-821-4242">(514) 821-4242</a>
+            </li>
+            <li class="footer-list__item">
+              <img src="/assets/images/map-icon.svg" alt="">
+              <a class="footer-list__link" href="https://goo.gl/maps/bYxKmMPLn6o">1483 Chemin Dufresne, Notre-Dame de la Merci</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
