--- a/sabliere/_sass/_base.scss
+++ b/sabliere/_sass/_base.scss
@@ -1,45 +1,44 @@
-main {
-  overflow: hidden;
-}
 
 .wrap {
-  padding: 15px;
+  position: relative;
+  margin: 0 15px;
 
   @include media('desktop-wide') {
-    padding: 60px;
+    margin: 0 60px;
   }
 }
 
-.wrap:nth-child(1){
-  padding-bottom: 0px;
-}
 
 .banner {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 680px;
-  width: 100%;
   z-index: -1;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
-.content, .content__list {
+.content {
   z-index: 1;
   position: relative;
-  margin: 0 -1px;
-  margin-bottom: -1px;
-  margin-top: 370px;
+  margin: 0 -1px -1px;
   overflow: hidden;
+  background: white;
 
-  @include media('desktop-wide') {
-    margin-top: 490px;
+  @include media('tablet-up') {
+    margin-top: -30px;
   }
 }
 
-.content__list {
-  background: white;
-  padding: 0;
 
+// CONTENT LIST
+// -----------------------------------------------------------------------------
+
+.content__list {
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -53,30 +52,35 @@ main {
   border-top: none;
   border-left: none;
   box-sizing: border-box;
-      width: 320px;
+  width: 320px;
 
-  @include media('desktop') {
+  @include media('tablet-up') {
     padding: 40px;
   }
 }
 
+
+// SPLIT
+// -----------------------------------------------------------------------------
+
 .split {
   display: flex;
-  background: white;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .split-item {
   padding: 20px 0;
-  flex-grow: 1;
-  // padding-bottom: 70px;
+  box-sizing: border-box;
 
   @include media('tablet-up') {
-    width: 310px;
+    width: 50%;
     padding: 40px;
   }
 }
+
+
+// ARROW LIST
+// -----------------------------------------------------------------------------
 
 .arrow-list {
   list-style-image: url('/assets/images/list-arrow.svg');
@@ -116,6 +120,7 @@ main {
 .button {
   background: $accent-color;
   color: white;
+  font-weight: 500;
   padding: 20px;
   border-radius: 3px;
   display: inline-block;
