--- a/sabliere/_sass/_footer.scss
+++ b/sabliere/_sass/_footer.scss
@@ -3,11 +3,14 @@
 
 .footer {
   background: #EDEDED;
+  padding: 30px 0;
+
+  @include media('desktop-wide') {
+    padding: 40px 0;
+  }
 }
 
 .footer__extra-wrap {
-  padding: 30px 40px;
-
   @include media('desktop-wide') {
     padding: 0 40px;
   }
