--- a/sabliere/_sass/_header.scss
+++ b/sabliere/_sass/_header.scss
@@ -6,10 +6,17 @@
   overflow: hidden;
   background: #fff;
   box-shadow: 0 10px 40px rgba(0,0,0,.15);
+  position: absolute;
+  width: 100%;
+  top: 15px;
 
   @include media('desktop') {
     display: flex;
     align-items: center;
+  }
+
+  @include media('desktop-wide') {
+    margin-top: 60px;
   }
 }
 
@@ -66,11 +73,11 @@
   padding: 25px 10px;
   width: 100%;
   box-sizing: border-box;
+}
 
-  .nav__item--active & {
-    color: black;
-    font-weight: 400;
-  }
+.nav__link--active {
+  color: #333;
+  font-weight: 500;
 }
 
 .nav__item--button {
