--- a/sabliere/_sass/_produits.scss
+++ b/sabliere/_sass/_produits.scss
@@ -2,14 +2,14 @@
 // -----------------------------------------------------------------------------
 
 .produits__banner {
-  background: url(/assets/images/pierre-banner.JPG);
+  background: url('/assets/images/pierre-banner.JPG');
   background-size: cover;
   background-position: 50%;
 }
 
 #map {
   width: 100%;
-  height: 580px;
+  height: 100%;
 }
 
 .content__list-item:nth-child(8) {
