--- a/_sass/_compagnie.scss
+++ b/_sass/_compagnie.scss
@@ -1,5 +1,5 @@
 .compagnie-banner {
-  background: url('/assets/images/marcel.JPG');
+  background: url('/assets/images/marcel.jpg');
   background-size: cover;
   background-position: 50%;
 }
