--- a/_sass/_ouverture-compte.scss
+++ b/_sass/_ouverture-compte.scss
@@ -1,5 +1,5 @@
 .ouverture-banner {
-  background: url(/assets/images/tas-sable.JPG);
+  background: url('/assets/images/tas-sable.jpg');
   background-size: cover;
   background-position: 50%;
 }
