--- a/_sass/_produits.scss
+++ b/_sass/_produits.scss
@@ -2,7 +2,7 @@
 // -----------------------------------------------------------------------------
 
 .produits__banner {
-  background: url('/assets/images/pierre-banner.JPG');
+  background: url('/assets/images/pierre-banner.jpg');
   background-size: cover;
   background-position: 50%;
 }
