--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -1,5 +1,5 @@
 .services__banner {
-  background: url('/assets/images/tamiseur.JPG');
+  background: url('/assets/images/tamiseur.jpg');
   background-size: cover;
   background-position: 50%;
 }
