Fix images (Home page)

--- a/_sass/_accueil.scss
+++ b/_sass/_accueil.scss
@@ -21,7 +21,7 @@
 
 .split__image--1 {
   @extend %split__image;
-  background-image: url('/assets/images/pierre.jpg');
+  background-image: url('/assets/images/pierre-banner.jpg');
 }
 
 .split__image--2 {
