--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 
 .wrap {
   position: relative;
-  margin: 0 15px;
+  margin: 0 20px;
 
   @include media('desktop-wide') {
     margin: 0 60px;
@@ -23,7 +23,6 @@
 .content {
   z-index: 1;
   position: relative;
-  margin: 0 -1px -1px;
   overflow: hidden;
   background: white;
 
@@ -38,7 +37,7 @@
 
 .content__list {
   padding: 0;
-  margin: 0;
+  margin: -1px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -107,11 +106,10 @@
 }
 
 .split__content {
-  padding: 40px 0;
+  padding: 40px;
   flex-grow: 1;
 
   @include media('desktop') {
-    padding: 40px;
     width: 460px;
     flex-grow: 0;
   }
