--- a/global.css
+++ b/global.css
@@ -52,10 +52,25 @@ a {
 
 a:hover {
   color: var(--dark-blue);
+  text-decoration: underline;
 }
 
 h1,
 h2,
 h3 {
+  margin: 0;
+}
+
+h2 {
+  font-size: 26px;
+  margin: 0 0 18px 0;
+  font-weight: 500;
+  color: var(--black);
+}
+
+p {
+  color: var(--dark-gray);
+  font-size: 17px;
+  line-height: 1.5em;
   margin: 0;
 }
