--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -7,7 +7,7 @@
 }
 
 .HeroTitle {
-  font-family: Tungsten;
+  font-family: Tungsten, Impact;
   text-transform: uppercase;
   color: white;
   font-weight: 100;
