--- a/global.css
+++ b/global.css
@@ -25,7 +25,7 @@
   font-display: swap;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   :root {
     --base: 20px;
   }
@@ -65,7 +65,7 @@ h3 {
 
 h2 {
   font-size: 26px;
-  margin: 0 0 18px 0;
+  margin: 0 0 20px 0;
   font-weight: 500;
   color: var(--black);
 }
@@ -75,4 +75,13 @@ p {
   font-size: 17px;
   line-height: 1.5em;
   margin: 0;
+}
+
+hr {
+  opacity: 0.5;
+}
+
+strong {
+  font-weight: 500;
+  color: #000;
 }
